refactor: remove unused contract and rename the new contract

--- a/web3/package.json
+++ b/web3/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "hardhat-javascript-starter",
+  "name": "crowdfunding-web3",
+  "version": "1.0.0",
+  "description": "Crowdfunding application for web3",
+  "main": "index.js",
   "scripts": {
-    "build": "npx thirdweb@latest detect",
-    "deploy": "npx thirdweb@latest deploy",
-    "publish": "npx thirdweb@latest publish"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "fbahesna fbahezna@gmail.com",
+  "license": "ISC",
   "devDependencies": {
-    "@matterlabs/hardhat-zksync-solc": "^0.3.17",
-    "hardhat": "^2.13.0"
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@nomiclabs/hardhat-ethers": "^1.0.0",
+    "ethers": "^6.13.4",
+    "hardhat": "^2.22.16"
   },
   "dependencies": {
-    "@thirdweb-dev/contracts": "^3.8.0",
-    "zksync-web3": "^0.14.3"
+    "dotenv": "^16.4.5"
   }
 }
